User story post finished

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title : Nils Blum-Oeste
 tagline: All in software development
 author :
   name : Nils Blum-Oeste
-  email : nils -at- blum-oeste.de
+  email : nils@blum-oeste.de
   github : nblumoe
   twitter : nblumoe
   feedburner : nblumoeste@googlemail.com
