--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author :
   email : nils@blum-oeste.de
   github : nblumoe
   twitter : nblumoe
-  feedburner : nblumoeste@googlemail.com
+  feedburner : nils-blum-oeste
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
