--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ author :
   email : nils@blum-oeste.de
   github : nblumoe
   twitter : nblumoe
+  googeplus : https://plus.google.com/u/0/108620647514621362580
   feedburner : nils-blum-oeste
 
 # The production_url is only used when full-domain names are needed
