--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ JB :
   # Set 'provider' to false to turn commenting off globally.
   #
   comments :
-    provider : disqus
+    provider : google
     disqus :
       short_name : nils-blum-oeste
     livefyre :
